Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/TryWithResources/TwrVarKinds.out
TwrVarKinds.java:28:14: compiler.err.try.with.resources.expr.effectively.final.var: r3
TwrVarKinds.java:33:16: compiler.err.try.with.resources.expr.effectively.final.var: r4
2 errors
